[package]
name = "rwinreg"
version = "0.2.0-janstarke.1"
authors = ["Matthew Seyer <https://github.com/forensicmatt/r-winreg>"]

[lib]
name = "rwinreg"

[dependencies]
clap = "2"
log = "0.3"
env_logger = "0.3"
byteorder = "1"
encoding = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trace-error = "0.1.5"
bitflags = "1.0"
seek_bufread = "~1.2"
winstructs = {git = "https://github.com/janstarke/winstructs", branch="feature/serialize", version="0.3.1-alpha.0-janstarke.1"}
